// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm renders a logged-in view 1`] = `
.c0 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
  background-color: #E4303E;
  box-shadow: none;
}

<div>
  <button
    class="sc-AxirZ c0"
  >
    Logout
  </button>
</div>
`;

exports[`LoginForm renders a login form 1`] = `
.c2 {
  background-color: white;
  color: #212529;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  overflow-x: auto;
  padding: 0.5rem 1rem;
  white-space: pre-wrap;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c7 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c4 {
  border: none;
  font-family: 'Press Start 2P',monospace;
  line-height: 1.5em;
  outline-color: #212529;
  padding: 0.5rem 1rem;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c6 {
  color: #212529;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 1em 0;
  min-height: 3em;
}

.c5 {
  margin: 1em 0 0 0;
}

.c0 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
  background-color: #E4303E;
  box-shadow: none;
}

.c3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

<div>
  <button
    class="c0"
  >
    Logout
  </button>
  <div
    class="c1"
  >
    <div
      class="c2"
      type="black"
    >
      <form
        class="c3"
      >
        <input
          aria-label="username"
          autocomplete="username"
          class="c4"
          name="username"
          placeholder="username"
          required=""
          type="text"
          value=""
        />
        <div
          class="c5"
        />
        <input
          aria-label="password"
          autocomplete="password"
          class="c4"
          name="password"
          placeholder="password"
          required=""
          type="password"
          value=""
        />
        <div
          class="sc-AxhCb c6"
          type="black"
        >
           
        </div>
        <button
          class="c7"
        >
          Login
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`LoginForm renders a login form with error 1`] = `
.c2 {
  background-color: #ffd7cf;
  color: #ce372b;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  overflow-x: auto;
  padding: 0.5rem 1rem;
  white-space: pre-wrap;
  box-shadow: 0 4px #e76e55,0 -4px #e76e55,4px 0 #e76e55,-4px 0 #e76e55;
  margin: 4px;
}

.c7 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c4 {
  border: none;
  font-family: 'Press Start 2P',monospace;
  line-height: 1.5em;
  outline-color: #212529;
  padding: 0.5rem 1rem;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4d525666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.c6 {
  color: #ce372b;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  margin: 1em 0;
  min-height: 3em;
}

.c5 {
  margin: 1em 0 0 0;
}

.c0 {
  background-color: white;
  color: #212529;
  cursor: pointer;
  display: block;
  font-family: 'Press Start 2P',monospace;
  font-size: 0.65em;
  font-weight: bold;
  line-height: calc(2 * 1.5em);
  padding: 0.5em;
  box-shadow: 0 4px #4d5256,0 -4px #4d5256,4px 0 #4d5256,-4px 0 #4d5256;
  margin: 4px;
  background-color: #E4303E;
  box-shadow: none;
}

.c3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

<div>
  <button
    class="c0"
  >
    Logout
  </button>
  <div
    class="c1"
  >
    <div
      class="c2"
      type="error"
    >
      <form
        class="c3"
      >
        <input
          aria-label="username"
          autocomplete="username"
          class="c4"
          name="username"
          placeholder="username"
          required=""
          type="text"
          value=""
        />
        <div
          class="c5"
        />
        <input
          aria-label="password"
          autocomplete="password"
          class="c4"
          name="password"
          placeholder="password"
          required=""
          type="password"
          value=""
        />
        <div
          class="sc-AxhCb c6"
          type="error"
        >
          418: The resulting entity body MAY be short and stout.
        </div>
        <button
          class="c7"
        >
          Login
        </button>
      </form>
    </div>
  </div>
</div>
`;
